--- a/style.css
+++ b/style.css
@@ -46,14 +46,35 @@ body {
     margin-bottom: 30px;
 }
 
-card h1 {
+.card h1{
     color: var(--white);
-    font-size: 20px;
+    font-size: 28px;
     margin-bottom: 15px;
 }
 
-card p {
+.card p {
     color: var(--light-gray);
     font-size: 15px;
     line-height: 24px;
+}
+
+.botoes {
+    display: flex;
+
+}
+
+.botoes button {
+    width: 51px;
+    height: 51px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    border-radius: 50%;
+    border: none;
+    color: var(--medium-gray);
+    background-color: var(--dark-blue);
+}
+
+.boteoes button:hover {
+    
 }
