sexto commit do css

--- a/style.css
+++ b/style.css
@@ -56,11 +56,13 @@ body {
     color: var(--light-gray);
     font-size: 15px;
     line-height: 24px;
+    margin-bottom: 24px;
 }
 
 .botoes {
     display: flex;
-
+    justify-content: space-between;
+    margin-bottom: 32px;
 }
 
 .botoes button {
@@ -73,8 +75,40 @@ body {
     border: none;
     color: var(--medium-gray);
     background-color: var(--dark-blue);
+
+    transition: all ease-in-out 0.3s;
 }
 
-.boteoes button:hover {
-    
+.botoes button:hover {
+    color: var(--white);
+    background-color: var(--orange);
+    cursor: pointer;
 }
+
+.botoes button:focus {
+    color: var(--white);
+    background-color: var(--light-gray);
+}
+
+.card > button {
+    width: 100%;
+    padding: 13px;
+    background-color: var(--orange);
+    border: none;
+    border-radius: 22px;
+
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color:  var(--white);
+
+    transition: all ease-in-out 0.3s;
+}
+
+.card > button:hover {
+    color: var(--orange);
+    background-color: var(--white);
+    cursor: pointer;
+}
+
